# berry_be_rs

./: .env  Cargo.toml  future-features.md  readme.md
berry_lib/: Cargo.toml
berry_lib/src/: lib.rs
berry_lib/src/api/: api_response.rs
berry_lib/src/auth/: jwt.rs
berry_lib/src/config/: moderation_defaults.json
berry_lib/src/openai/: moderation.rs
berry_lib/src/twitch/: bot.rs  bot_manager.rs  bot_storage.rs  channel_actor.rs  commands.rs  message_processor.rs  mod.rs  twitch_access_token.rs  twitch_api.rs  twitch_chat.rs  twitch_endpoint.rs  twitch_service.rs  twitch_user_data.rs
src/: main.rs
src/controllers/auth/: login.rs
src/middleware/: auth_middleware.rs
src/models/user/: mod.rs  set_user_db.rs
src/routes/: auth_rotues.rs  mod.rs
src/services/: init_db.rs  mod.rs  twitch_service.rs
