workspace = { members = ["berry_lib"] }
[package]
name = "berry_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-service = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.7.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"
berry_lib = {"path" = "./berry_lib"}
log = "0.4.14"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12", features = ["json"] }  
chrono = "0.4.34"
colored = "2.1.0"
lazy_static = "1.4.0"
actix = "0.13.3"

