[package]
name = "berry_lib"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
dotenv = "0.15"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }  
tokio = { version = "1", features = ["full"] }
colored = "2.1.0"